# drone-swarm

./: .gitignore  .gitmodules  LICENSE  README.md
Experiment_Data/Experiment 1/1_V_Shape/: 1_v_notes.txt
Experiment_Data/Experiment 1/2_Grid/: 2_G_notes.txt
Experiment_Data/Experiment 1/3_Polygon/: 3_P_notes.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/share/offboardnode/cmake/: offboardnodeConfig.cmake
catkin_ws/devel/share/px4/cmake/: px4Config.cmake
catkin_ws/logs/formation_control/: build.check.007.log.stderr  build.check.008.log.stderr  build.check.010.log.stderr  build.check.011.log.stderr  build.check.012.log.stderr  build.make.000.log.stderr  build.make.018.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.039.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.051.log.stderr  build.make.053.log.stderr
catkin_ws/logs/supervisor/: build.check.002.log.stderr  build.check.003.log.stderr  build.check.006.log.stderr  build.check.007.log.stderr  build.check.008.log.stderr  build.check.009.log.stderr  build.check.011.log.stderr  build.check.013.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.004.log.stderr  build.cmake.005.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.037.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.047.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  (+14 more)
catkin_ws/src/controller/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/controller/nodes/: p_control
catkin_ws/src/controller/src/: controller.py
catkin_ws/src/controller/src/controller/: array_operations.py  error_functions.py  p_controller.py
catkin_ws/src/error_estimator/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/error_estimator/nodes/: error_estimator
catkin_ws/src/error_estimator/src/error_estimator/: array_operations.py  error_estimator.py
catkin_ws/src/formation_control/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/formation_control/catkin_generated/: formation_control-msg-extras.cmake.develspace.in  formation_control-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws/src/formation_control/catkin_generated/installspace/: formation_control-msg-paths.cmake  formation_control.pc  formation_controlConfig.cmake
catkin_ws/src/formation_control/cmake/: formation_control-genmsg-context.py  formation_control-genmsg.cmake
catkin_ws/src/formation_control/include/formation_control/: frame.hpp
catkin_ws/src/formation_control/launch/: test_srv.launch
catkin_ws/src/formation_control/src/: frame.cpp  srv_call.cpp
catkin_ws/src/formation_control/srv/: Formation.srv
catkin_ws/src/kalman_filter/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/kalman_filter/nodes/: kalman_filter
catkin_ws/src/kalman_filter/src/kalman_filter/: kalman.py
catkin_ws/src/offboardnode/: CMakeLists.txt
catkin_ws/src/pycopter/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pycopter/launch/: drone_swarm.launch
catkin_ws/src/pycopter/nodes/: drone_swarm  pycopter
catkin_ws/src/pycopter/src/pycopter/: animation.py  drone_swarm.py  ex_triangle_2D.py  plotter.py  quadlog.py  quadrotor.py  simulation.py
catkin_ws/src/pycopter/srv/: DroneSwarmMultiArray.srv  PycopterStartPositions.srv  PycopterStartStop.srv
catkin_ws/src/pycopter/test/: test_positions_start_services.py
catkin_ws/src/supervisor/: CMakeLists.txt  package.xml  package.xml.bak
catkin_ws/src/supervisor/include/supervisor/Model/: supervisor.hpp
catkin_ws/src/supervisor/include/supervisor/View/: mainwindow.h
catkin_ws/src/supervisor/launch/: execute.launch  initial_run.launch  reset.launch
catkin_ws/src/supervisor/src/Model/: supervisor.cpp
catkin_ws/src/supervisor/src/View/: CMakeLists.txt  View.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  simviewer.cpp  simviewer.h
catkin_ws/src/supervisor/src/View/src/: main.cpp  mainwindow.cpp  qcustomplot.cpp.bak
kalman/: .gitignore  README.md  animation.py  ex_position.py  ex_triangle_2D.py  ex_vel_ned.py  formation_distance.py  kalman.py  quadlog.py  quadrotor.py
src/offboardnode/: package.xml
src/offboardnode/src/: offboard_node.py
